# fatfs-aft

./: .gitmodules  CMakeLists.txt  Makefile  README.md  aftx07.ld  fatfs_test.c  file_test.c  os.c  pal.h  test.c
examples/: example.c
include/: diskio_mmc.h  diskio_ram.h  diskio_usb.h  ffconf.h
source/: cli.c  cli.h  diskio.c  diskio_mmc.c  diskio_ram.c  diskio_usb.c  ff.c  ffconf.h  sdio.c  sdio.h  spi_sd.c  spi_sd.h  time.c  time.h
